# pysurreal

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
pysurreal/: __init__.py
pysurreal/connector/: __init__.py  client.py  result.py
